Bug 341150 - The down arrow on the Kexi opening tab has been removed
Summary: The down arrow on the Kexi opening tab has been removed
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: General (other bugs)
Version First Reported In: 2.9 Alpha
Platform: Other Linux
: NOR minor
Target Milestone: 2.8.7
Assignee: Jarosław Staniek
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2014-11-21 08:00 UTC by Ian Balchin
Modified: 2014-12-01 21:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8.7
Sentry Crash Report:


Attachments
Inactive Kexi tab (2.64 KB, image/png)
2014-11-21 08:20 UTC, Jarosław Staniek
Details
Active Kexi tab (2.60 KB, image/png)
2014-11-21 08:20 UTC, Jarosław Staniek
Details
Inactive Kexi tab for Oxygen style (4.22 KB, image/png)
2014-11-21 15:52 UTC, Jarosław Staniek
Details
oxygen style showing Kexi tab with mouse over (115.99 KB, image/png)
2014-11-22 08:17 UTC, Ian Balchin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Balchin 2014-11-21 08:00:12 UTC
This arrow served to indicate the only useable tab at that point and indicated availability of a drop-down menu from that tab

Reproducible: Always

Steps to Reproduce:
1. Open Kexi
2. inspect the first and leftmost tab with the text 'Kexi'

Actual Results:  
No arrow adjacent to right hand side of 'Kexi'

Expected Results:  
An arrow adjacent to right hand side of 'Kexi'

This arrow has always been present until now.
Comment 1 Jarosław Staniek 2014-11-21 08:19:02 UTC
Confirmed there's a change. Agree that it indicated availability of a drop-down menu from that tab. 
Not sure about it indicating the only useable tab at "a" point, it's just not considered as such.

And not sure if drop down behaviour is much different in this compared to other tabs. In fact other tabs have drop-down areas, just smaller.

The tab switched to bold text from a graphics, and the old graphics contain the arrow. So would have to paint the arrow using standard means of Qt. But should we? The Kexi tab is specially painted when inacive and when active as we can see on the attached screenshot.
Comment 2 Jarosław Staniek 2014-11-21 08:20:12 UTC
Created attachment 89661 [details]
Inactive Kexi tab
Comment 3 Jarosław Staniek 2014-11-21 08:20:58 UTC
Created attachment 89662 [details]
Active Kexi tab
Comment 6 Ian Balchin 2014-11-21 09:00:56 UTC
I agree that the text is set in bold and it is not just a case of a dropped arrow.

Looking at the graphic on another machine with an older build and with a nice lcd display this looks very stylish

The new bold text on a 1024 x 768 cathode ray monitor  is not so stylish, when I hover over the tab it 'doubles up' and the 'K' becomes thick and blodgy, and the 'i' appears doubled.

As my experience suggests, for existing users the removal of the old graphic with arrow and its substitution with bold text is very evident. The current text implementation (as I see it using the oxygen style) does not look so good.

But over to you, it was changed for a reason I am sure.
Comment 7 Ian Balchin 2014-11-21 09:13:49 UTC
(In reply to Jarosław Staniek from comment #3)
> Created attachment 89662 [details]
> Active Kexi tab

Mine looks nothing like that, at least under style=oxygen
tabs have rounded corners and are shaded on hover and subsequent selection
Comment 8 Jarosław Staniek 2014-11-21 15:52:50 UTC
Created attachment 89666 [details]
Inactive Kexi tab for Oxygen style
Comment 9 Jarosław Staniek 2014-11-21 15:58:24 UTC
"The new bold text on a 1024 x 768 cathode ray monitor is not so stylish, when I hover over the tab it 'doubles up' and the 'K' becomes thick and blodgy, and the 'i' appears doubled."

I can imagine why is that. Would be fixed.

"As my experience suggests, for existing users the removal of the old graphic with arrow and its substitution with bold text is very evident. The current text implementation (as I see it using the oxygen style) does not look so good."

Yeah, what if in Oxygen style the Kexi tab shows an always present rectangle as in the Breeze style (https://bugsfiles.kde.org/attachment.cgi?id=89661)?
Comment 10 Ian Balchin 2014-11-22 08:17:14 UTC
Created attachment 89677 [details]
oxygen style showing Kexi tab with mouse over

could not select smaller area using mouse with mouse on! enlarge this image as good detail and the doubling effect is shown clearly.
Comment 11 Jarosław Staniek 2014-11-22 08:19:42 UTC
Thanks @Ian, yes I see the glitch.
Comment 12 Jarosław Staniek 2014-11-24 22:07:43 UTC
OK, @Ian, there's solution to test, if you want to test, please update calligra/2.8 branch, apply the patch from https://git.reviewboard.kde.org/r/121237/ (use Download Diff, type "patch -p1 < patchname" from the command line in calligra/ dir;  ask me on IRC for help), then compile and install.
It fixes look of gtk+ style too.
Comment 13 Jarosław Staniek 2014-12-01 21:21:21 UTC
Git commit 9f75e62e456e6ea0f454555ffdeb828101c70045 by Jaroslaw Staniek.
Committed on 24/11/2014 at 21:20.
Pushed by staniek into branch 'calligra/2.8'.

Improve appearance of main tabbed toolbar for GTK+ and Oxygen styles

+properly redraw bottom line when needed
FIXED-IN:2.8.7

backported from 2.9

M  +19   -18   kexi/main/KexiMainWindow_p.h

http://commits.kde.org/calligra/9f75e62e456e6ea0f454555ffdeb828101c70045
Comment 14 Jarosław Staniek 2014-12-01 21:21:57 UTC
Git commit c4875b5037567eb4f56cc1c5e3842f17b694e4dd by Jaroslaw Staniek.
Committed on 24/11/2014 at 21:20.
Pushed by staniek into branch 'master'.

Improve appearance of main tabbed toolbar for GTK+ and Oxygen styles

+properly redraw bottom line when needed

M  +19   -13   kexi/main/KexiMainWindow_p.h

http://commits.kde.org/calligra/c4875b5037567eb4f56cc1c5e3842f17b694e4dd