Improve appearance of main tabbed toolbar for GTK+ and Oxygen styles

+properly redraw bottom line when needed

BUG:341150
FIXED-IN:2.8.7

backported from 2.9